# FacialRecognition

./: face_data.csv  facedetect.py  npwriter.py  pyproject.toml  recog.py
