[tool.poetry]
name = "facialrecognition2"
version = "0.1.0"
description = ""
authors = ["JasonHinch <jasonhinch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
